--- a/appreciation_project/appreciation/templates/appreciation/base.html
+++ b/appreciation_project/appreciation/templates/appreciation/base.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}My Website{% endblock %}</title>
     <link rel="stylesheet" href="{% static 'style.css' %}">
+        <!-- Add a Google Font for styling -->
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     {% block style %} <link rel="stylesheet" href="{% static 'style.css' %}"> {% endblock %}
 </head>
 <body>
