--- a/appreciation_project/appreciation/templates/appreciation/team_members.html
+++ b/appreciation_project/appreciation/templates/appreciation/team_members.html
@@ -7,32 +7,6 @@
 {% block content %}
 
 <h1>Team Members</h1>
-
-        .user-list {
-            list-style-type: none;
-            padding: 0;
-        }
-
-        .user-list li {
-            background-color: #0078D4;
-            color: white;
-            margin: 10px 0;
-            padding: 15px;
-            border-radius: 5px;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
-
-        .user-list li:hover {
-            background-color: #005A9E;
-        }
-    </style>
-</head>
-<body>
-
-    <h1>Team Members</h1>
-
     <div class="user-container">
         <ul class="user-list">
             {% for user in users %}
@@ -41,5 +15,4 @@
         </ul>
     </div>
 
-</body>
-</html>
+{% endblock %}
